errors.txt
=== Missing signal ===

    File "Gtk/CssProviderG.ml", line 29, characters 38-65:
    29 |   method parsing_error = self#connect CssProvider.S.parsing_error
                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^
    Error: Unbound value CssProvider.S.parsing_error

    Hint: Did you mean GIGio?
    File "Gtk/PlacesSidebarG.ml", line 52, characters 46-83:
    52 |   method drag_action_requested = self#connect PlacesSidebar.S.drag_action_requested
                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    Error: Unbound value PlacesSidebar.S.drag_action_requested

    File "Gtk/TextTagG.ml", line 170, characters 30-45:
    170 |   method event = self#connect TextTag.S.event
                                        ^^^^^^^^^^^^^^^
    Error: Unbound value TextTag.S.event


=== Interfaces ===

    File "Gtk/TreeModelFilterG.ml", line 18, characters 21-42:
    18 |   method get_model : TreeModelG.tree_model = 
                              ^^^^^^^^^^^^^^^^^^^^^
    Error: Unbound module TreeModelG
